--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,8 @@ body{
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+
+    max-width: 100vw;
 }
 
 a{
